@@ -1,3 +1,9 @@
+2008-06-04  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/component/encoders/wmv/wmv.py:
+	* flumotion/component/producers/wms/wms.py:
+	Update to the latest flumotion import changes
+
 2008-05-27  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/component/encoders/wmv/admin_gtk.py:
